feat: Add docs at /openapi and spec at /openapi.json
